[gd_scene load_steps=11 format=3 uid="uid://dyj4k2qmjnvbp"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_rkk8e"]
[ext_resource type="AudioStream" uid="uid://y1g75k8xv552" path="res://jump.wav" id="2_8al4e"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bgwjk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gpljw"]

[sub_resource type="Animation" id="Animation_elvp5"]
resource_name = "flashjump"
length = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_8al4e")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fscg8"]
_data = {
"flashjump": SubResource("Animation_elvp5")
}

[sub_resource type="Animation" id="Animation_lf0rw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/Camera3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_07lca"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/Camera3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.349066)]
}

[sub_resource type="Animation" id="Animation_5nmml"]
resource_name = "uncrouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 0.2, 0), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/Camera3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.349066), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5oobs"]
_data = {
"RESET": SubResource("Animation_lf0rw"),
"crouch": SubResource("Animation_07lca"),
"uncrouch": SubResource("Animation_5nmml")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(-0.950927, 0, 0.309415, 0, 1, 0, -0.309415, 0, -0.950927, 0, 0, 0)
script = ExtResource("1_rkk8e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_bgwjk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -5.96046e-08, 0, 1, 0, 5.96046e-08, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_gpljw")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
fov = 80.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VelocityLabel" type="Label" parent="CanvasLayer"]
offset_left = 36.0
offset_top = 31.0
offset_right = 106.0
offset_bottom = 57.0
text = "Velocity: "

[node name="IsFlashjumpLabel" type="Label" parent="CanvasLayer"]
offset_left = 36.0
offset_top = 57.0
offset_right = 148.0
offset_bottom = 83.0
text = "is_flash_jump: "

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 110.0
offset_top = 516.0
offset_right = 150.0
offset_bottom = 542.0
text = "DASH METER"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 111.0
offset_top = 549.0
offset_right = 361.0
offset_bottom = 576.0
max_value = 1000.0
step = 1.0
value = 20.0

[node name="DashRefillTimer" type="Timer" parent="CanvasLayer"]
wait_time = 0.05
autostart = true

[node name="CrouchDashTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlashJumpTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fscg8")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]

[node name="AcrobatPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5oobs")
}

[connection signal="timeout" from="CanvasLayer/DashRefillTimer" to="." method="_on_dash_refill_timer_timeout"]
[connection signal="timeout" from="FlashJumpTimer" to="." method="_on_flash_jump_timer_timeout"]
